# qbf_abc

./: .gitignore  CMakeLists.txt  Makefile  dotgen  dotgen.cpp  excheck.cpp  gen.sh  gen_cnn_png.py  mesh.py  mesh.sh  mesh16.py  mesh4.py  mesh_con.py  mesh_con.sh  meshgen  meshgen.cpp  ring.sh  run.sh  source.sh
allgather4fdx/: setting.txt
allgather4fdx_d/: setting.txt
allgather4fdx_d_opt/: setting.txt
allgather4hdx/: setting.txt
allgather4hdx_d/: setting.txt
allgather4spx/: setting.txt
allgather4spx3/: setting.txt
allgather5spx4/: setting.txt
bcast1to4fdx/: setting.txt
bcast1to4hdx/: setting.txt
bcast1to4spx/: setting.txt
cnn4/: cnn_m4x4_w2x2.txt  ooo.blif  setting.txt  setting2.txt
cnn4fdx16/: setting.txt
cnn4fdx16opt/: setting.txt  setting2.txt
cnn4hdx16/: setting.txt
cnn9fdx16opt/: setting.txt
comtest/: __impl.blif  __log.txt  __tmp_top.blif  out2.blif  setting.txt  setting2.txt  tmp.blif
comtest2/: setting.txt  spec.blif
comtest3/: setting.txt
comtest4/: setting.txt  spec.blif
comtest5/: setting.txt  spec.blif
include/: impl_data.h  impl_data.hpp  qbf_abc.hpp  spec_data.h  spec_data.hpp  template_data.h  top_data.h  top_data.hpp
matrix2/: #tmp_top1.blif#  __log.txt  __tmp_top.blif  _log.txt  _tmp_top.blif  answer.blif  impl.blif  impl_noope.blif  impl_old.blif  impl_old2.blif  out.blif  output.blif  spec.blif  tmp_top1_noope.blif
matrix2_2bit/: __log.txt  __tmp_top.blif  impl.blif  impl_noope.blif  output.blif  spec.blif  tmp_top1.blif
mvm4/: setting.txt
python_src/: gen_cnf  gen_cnf.cpp  gen_cnf.py  gen_cnn_png.py  (+6 more)
(+17 files in other folders)
